<resources>
    <string name="app_name">My Weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_detail">DetailActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default">94043</string>
    <string name="pref_location_key">location</string>
    <string name="pref_unit_key">units</string>
    <string name="pref_unit_title">Temperature Units</string>
    <string name="action_map">Map</string>
</resources>
